[package]
name = "diagnostica"
version = "0.1.0"
edition = "2021"

[lib]
name = "diagnostica"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.6"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = { version = "1.0.111", features = [] }
regex = "1.10.2"
encoding_rs = "0.8.33"